--- a/javascript/10oct2018-3/index.html
+++ b/javascript/10oct2018-3/index.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-</head>
-<body id="mainbody">
-    <img src="https://media2.giphy.com/media/1qW2LNsbx1VsI/giphy-preview.webp" alt="">
-
     <script src="js/main.js"></script>
+</head>
+<body>
+    <div class="container flex-center">
+        <div class="card flex-center">
+            <div class="card-input flex-center">
+                    <form id="form-word" class="flex-center" autocomplete="off">
+                        <input id="textoDelUsuario" required type="text" name="input-word" placeholder="Ingresa un texto">
+                        <button type="submit" name="button" >Enviar</button>
+                    </form>
+            </div>
+            <div class="card-gif flex-center">
+                <p id="no-img">Genera tu gif</p>
+                <figure id="cont-img">
+                    
+                </figure>
+            </div>
+        </div>
+      </div>
+
+   
 </body>
 </html>
